오류나는 부분 수정 및 디자인 변경

--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -26,9 +26,9 @@
       &--btn {
         display: block;
         width: 35%;
-        height: 5vh;
-        line-height: 5vh;
-        font-size: 2.3rem;
+        height: 3rem;
+        line-height: 3rem;
+        font-size: 2rem;
         background-color: $color-secondary;
         color: $color-box;
         border-radius: 50px;
@@ -104,10 +104,10 @@
 
       &--btn {
         display: block;
-        width: 40%;
-        height: 50px;
-        line-height: 50px;
-        font-size: 2rem;
+        width: 35%;
+        height: 2.5rem;
+        line-height: 2.5rem;
+        font-size: 1.3rem;
         background-color: $color-secondary;
         color: $color-box;
         border-radius: 30px;
