데이터 수정 및 질문 선택시 테스트 및 질문에 대한 사진 추가

--- a/src/Main/views/Main/stylesheet.scss
+++ b/src/Main/views/Main/stylesheet.scss
@@ -21,8 +21,10 @@
 }
 
 .transition-group {
-  height: 100vh;
+  height: 100%;
+  max-height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .fade-enter,
