--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -50,22 +50,58 @@
       right: 0;
       bottom: 0.5rem;
       text-align: center;
-      z-index: 10;
+      z-index: 100;
       margin-right: 20px;
+      cursor: pointer;
 
       img {
         width: 115px;
         height: 115px;
         border: 2px solid $color-box;
         border-radius: 50%;
-        margin: 0 auto 10px;
+        margin: 0 auto 30px;
       }
 
-      span {
-        padding-top: 20px;
-        font-size: 1.5rem;
-        color: $color-box;
+      // span {
+      //   padding-top: 20px;
+      //   font-size: 1.5rem;
+      //   color: $color-box;
+      // }
+    }
+
+    &__popup {
+      position: absolute;
+      bottom: 11rem;
+      right: 2%;
+      width: 70%;
+      height: 150px;
+      max-height: auto;
+      background: $color-box;
+      border-radius: 1rem;
+      box-shadow: 5px 5px 5px $color-secondary;
+
+      &--span {
+        display: block;
+        width: 90%;
+        margin: 20px auto;
+        font-size: 1.8rem;
+        line-height: 2.5rem;
       }
+    }
+
+    &__popup:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 90%;
+      width: 0;
+      height: 0;
+      border: 20px solid transparent;
+      border-top-color: $color-box;
+      border-bottom: 0;
+      border-left: 0;
+      margin-left: -10px;
+      margin-bottom: -20px;
     }
 
     &__footer {
@@ -88,7 +124,7 @@
       width: 90%;
       position: absolute;
       top: 50%;
-      transform: translateY(-50%);
+      transform: translateY(-60%);
 
       &--text {
         display: block;
@@ -131,20 +167,56 @@
       text-align: center;
       z-index: 10;
       margin-right: 20px;
+      cursor: pointer;
 
       img {
         width: 65px;
         height: 65px;
         border: 2px solid $color-box;
         border-radius: 50%;
-        margin: 0 auto 10px;
+        margin: 0 auto 30px;
       }
 
-      span {
-        padding-top: 20px;
-        font-size: 1rem;
-        color: $color-box;
+      // span {
+      //   padding-top: 20px;
+      //   font-size: 1rem;
+      //   color: $color-box;
+      // }
+    }
+
+    &__popup {
+      position: absolute;
+      bottom: 9rem;
+      right: 2%;
+      width: 70%;
+      min-height: 120px;
+      height: auto;
+      background: $color-box;
+      border-radius: 1rem;
+      box-shadow: 5px 5px 5px $color-secondary;
+
+      &--span {
+        display: block;
+        width: 90%;
+        margin: 20px auto;
+        font-size: 1.2rem;
+        line-height: 2rem;
       }
+    }
+
+    &__popup:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 90%;
+      width: 0;
+      height: 0;
+      border: 20px solid transparent;
+      border-top-color: $color-box;
+      border-bottom: 0;
+      border-left: 0;
+      margin-left: -10px;
+      margin-bottom: -20px;
     }
 
     &__footer {
