Home Image 변경 및 결과 Intro 페이지 애니메이션 추가 완료 및 Intro page들 추가 및 변경

--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -37,6 +37,7 @@
       text-align: center;
       background-color: $color-theme;
       margin: auto;
+      -webkit-appearance: none;
 
       span {
         color: gray;
