결과창 디자인 변경 및 static데이터 저장 부분 변경으로 인해 파일 수정 및 데이터 수집
input number 타입일때 화살표 삭제
결과 페이지 반응형 끝내고 영양제 list마다 색 변경 필요

--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -44,6 +44,11 @@
       }
     }
 
+    &--error {
+      background-color: $color-button;
+      color: $color-secondary;
+    }
+
     &--select {
       position: absolute;
       top: 40%;
@@ -92,11 +97,30 @@
       color: $color-box;
     }
 
+    &--err {
+      position: absolute;
+      top: 0;
+      right: 130px;
+      height: 156px;
+      line-height: 156px;
+      font-size: 4rem;
+      color: $color-secondary;
+    }
+
     &--intro {
       width: 95%;
       font-size: 1.5rem;
       margin: 20px auto;
       text-align: end;
+    }
+
+    &--msg {
+      width: 95%;
+      font-size: 1.5rem;
+      margin: 20px auto;
+      text-align: end;
+      color: $color-secondary;
+      font-weight: bolder;
     }
 
     &--check {
@@ -157,6 +181,11 @@
       }
     }
 
+    &--error {
+      background-color: $color-button;
+      color: $color-secondary;
+    }
+
     &--select {
       position: absolute;
       top: 40%;
@@ -205,11 +234,30 @@
       color: $color-box;
     }
 
+    &--err {
+      position: absolute;
+      top: 0;
+      right: 90px;
+      height: 100px;
+      line-height: 100px;
+      font-size: 3rem;
+      color: $color-secondary;
+    }
+
     &--intro {
       width: 95%;
       font-size: 1.2rem;
       margin: 20px auto;
       text-align: end;
+    }
+
+    &--msg {
+      width: 95%;
+      font-size: 1.2rem;
+      margin: 20px auto;
+      text-align: end;
+      color: $color-secondary;
+      font-weight: bolder;
     }
 
     &--check {
