--- a/src/Main/views/StaticQna/stylesheet.scss
+++ b/src/Main/views/StaticQna/stylesheet.scss
@@ -1,19 +1,22 @@
 @import 'common/stylesheet/index.scss';
 
 .static__qna {
-  position: relative;
   height: 70vh;
-  margin-top: 70px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  transform: translateY(-50%);
 
   &--info {
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    right: 0;
-    transform: translateY(-25%);
     text-align: center;
     margin: 0 auto;
   }
+}
+
+.static__list {
+  top: 70px !important;
+  transform: translateY(0) !important;
 }
