--- a/src/normalize.scss
+++ b/src/normalize.scss
@@ -202,3 +202,9 @@ pre {
     font-size: 16px;
   }
 }
+
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
