--- a/src/Main/components/Question/stylesheet.scss
+++ b/src/Main/components/Question/stylesheet.scss
@@ -5,6 +5,7 @@
     width: 100%;
     font-size: 3.2rem;
     font-weight: lighter;
+    line-height: 4.5rem;
 
     strong {
       color: $color-secondary;
@@ -23,6 +24,7 @@
     width: 100%;
     font-size: 2.2rem;
     font-weight: lighter;
+    line-height: 3rem;
 
     strong {
       color: $color-secondary;
