--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -56,9 +56,26 @@
           &--gauge {
             width: 100%;
             height: 25px;
-            padding: 0;
             border-right: 1px solid rgb(230, 230, 230);
+            background-color: none;
+            z-index: 10;
           }
+        }
+      }
+
+      &--section {
+        position: relative;
+        width: 90%;
+        margin: auto;
+
+        &--gauge {
+          position: absolute;
+          top: 0;
+          width: 30%;
+          height: 33px;
+          z-index: 0;
+          background-color: $color-secondary;
+          border-radius: 50px;
         }
       }
 
@@ -67,6 +84,7 @@
         border-radius: 50px;
         overflow: hidden;
         margin-bottom: 40px;
+        width: 100% !important;
       }
 
       &--intro {
@@ -94,7 +112,8 @@
       &--map {
         width: 100%;
         display: flex;
-        height: 250px;
+        height: 280px;
+        min-height: 100%;
 
         &--cover {
           width: 35%;
@@ -119,7 +138,8 @@
             width: 95%;
             display: block;
             font-size: 1.2rem;
-            margin: 15px auto;
+            margin: 20px auto 15px;
+            font-weight: lighter;
           }
 
           &--name {
@@ -142,8 +162,14 @@
 
           &--description {
             width: 95%;
-            margin: 15px auto;
+            line-height: 2rem;
             font-size: 1.2rem;
+            margin-left: 40px;
+            list-style: circle;
+
+            &:first-child {
+              margin-top: 20px;
+            }
           }
         }
       }
@@ -225,5 +251,39 @@
         color: $color-box;
       }
     }
+  }
+}
+
+.omega3 {
+  background-color: rgb(234, 238, 224);
+}
+
+.probiotics {
+  background-color: rgb(236, 226, 224);
+}
+
+.vitaminB {
+  background-color: rgb(238, 223, 227);
+}
+
+.vitaminC {
+  background-color: rgb(238, 248, 249);
+}
+
+.info {
+  &__omega3 {
+    background-color: rgb(243, 243, 235);
+  }
+
+  &__probiotics {
+    background-color: rgb(244, 238, 235);
+  }
+
+  &__vitaminB {
+    background-color: rgb(237, 235, 238);
+  }
+
+  &__vitaminC {
+    background-color: rgb(246, 251, 251);
   }
 }
