결과 페이지 완성 및 Gauge 부분 완성, Header Menu 추가
결과페이지 :
- 반응형 완료
- BMI 데이터 부분 완성
- BMI 게이지 완성
- BMI 게이지에 해당하는 부분 Bolder 처리완료

Header Menu
- Header menu 부분 추가 완료
- menu에 모바일 사이즈일때 모바일 페이지로 이동, 웹사이즈일때 웹페이지로 이동하는 부분 완료

--- a/src/Main/views/StaticQna/stylesheet.scss
+++ b/src/Main/views/StaticQna/stylesheet.scss
@@ -1,22 +1,45 @@
 @import 'common/stylesheet/index.scss';
 
-.static__qna {
-  height: 70vh;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  transform: translateY(-50%);
+@include media('>medium') {
+  .static__qna {
+    height: 70vh;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    transform: translateY(-50%);
 
-  &--info {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    margin: 0 auto;
+    &--info {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+
+  .static__list {
+    top: 70px !important;
+    transform: translateY(0) !important;
   }
 }
 
-.static__list {
-  top: 70px !important;
-  transform: translateY(0) !important;
+@include media('<=small') {
+  .static__qna {
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+
+    &--info {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+
+  .static__list {
+    top: 70px !important;
+    transform: translateY(0) !important;
+  }
 }
