--- a/src/Main/components/AnswerList/stylesheet.scss
+++ b/src/Main/components/AnswerList/stylesheet.scss
@@ -1,24 +1,24 @@
 @import 'common/stylesheet/index.scss';
 
-.qna__list {
-  margin-top: 50px;
-  padding: 0 20px;
-  height: 70vh;
-  overflow: auto;
-  text-align: left;
+@include media('>medium') {
+  .qna__list {
+    margin-top: 50px;
+    padding: 0 20px;
+    height: 70vh;
+    overflow: auto;
+    text-align: left;
 
-  @include media('>medium') {
     &--three {
       display: inline-block;
       flex-wrap: wrap;
       width: 30%;
       line-height: $line_height-rem;
       margin: 2% 1.5%;
-      background-color: $color-button;
+      background-color: $color-theme;
       border-radius: 50px;
       font-size: $font_size-rem;
       text-align: center;
-      border: 3px solid $color-theme;
+      border: 4px solid $color-box;
     }
 
     &--pick {
@@ -29,7 +29,7 @@
       margin: 2% 1.6%;
       background-color: $color-theme;
       border-radius: 50px;
-      border: 3px solid $color-secondary;
+      border: 4px solid $color-secondary;
       font-size: $font_size-rem;
       text-align: center;
       color: $color-secondary;
@@ -38,7 +38,7 @@
 
     &--three:hover {
       border: 3px solid $color-secondary;
-      background-color: $color-theme;
+      background-color: $color-button;
     }
 
     &--answer {
@@ -95,8 +95,20 @@
       border: 3px solid $color-secondary;
     }
   }
+}
 
-  @include media('<=small') {
+@include media('<=small') {
+  .qna__three {
+    margin-top: 20px !important;
+  }
+
+  .qna__list {
+    margin-top: -60px;
+    padding: 0 20px;
+    height: 70vh;
+    overflow: auto;
+    text-align: left;
+
     &--three {
       display: inline-block;
       flex-wrap: wrap;
@@ -104,10 +116,10 @@
       font-size: 1.1rem;
       line-height: 3rem;
       margin: 2% 1.5%;
-      background-color: $color-button;
+      background-color: $color-theme;
       border-radius: 50px;
       text-align: center;
-      border: 3px solid $color-theme;
+      border: 3px solid $color-box;
     }
 
     &--pick {
@@ -126,14 +138,14 @@
     }
 
     &--answer {
-      width: 90%;
+      width: 95%;
       height: 3.5rem;
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
-      background-color: $color-box;
+      background-color: $color-theme;
       border-radius: 25px;
-      border: 5px solid $color-theme;
+      border: 4px solid $color-box;
 
       &--one {
         width: 90%;
@@ -149,7 +161,7 @@
         height: 15px;
         border: 4px solid rgb(220, 220, 220);
         border-radius: 50%;
-        margin: auto 30px;
+        margin: auto 20px;
       }
 
       &--pick {
@@ -157,13 +169,13 @@
         height: 15px;
         border: 4px solid $color-secondary;
         border-radius: 50%;
-        margin: auto 30px;
+        margin: auto 20px;
         background-color: $color-secondary;
       }
     }
 
     &--select {
-      width: 90%;
+      width: 95%;
       height: 3.5rem;
       margin: auto auto 10px;
       display: flex;
