--- a/src/Main/components/Header/stylesheet.scss
+++ b/src/Main/components/Header/stylesheet.scss
@@ -1,53 +1,147 @@
 @import 'common/stylesheet/index.scss';
 
-.header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 70px;
-  padding: 30px 20px 0;
-  display: flex;
-  justify-content: space-between;
-  z-index: 100;
+@include media('>medium') {
+  .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 100;
 
-  &__result {
-    width: 50px;
-    height: 50px;
-  }
+    &__result {
+      width: 50px;
+      height: 50px;
+      margin: 30px 20px;
+    }
 
-  @include media('>medium') {
     &__logo {
       width: 101px;
       height: 101px;
       border-radius: 5px;
+      margin: 30px 20px;
     }
 
     &__btn {
       width: 21px;
       height: 21px;
+      margin: 30px 20px;
 
       &--close {
         width: 100%;
         height: 100%;
       }
     }
+
+    &__menu {
+      width: 70px;
+      height: 70px;
+      margin: 25px 15px;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
-  @include media('<=small') {
+  .menu {
+    width: 100%;
+    height: auto;
+    z-index: 100;
+    position: absolute;
+    top: 100px;
+    background-color: $color-theme;
+
+    &__ul {
+      display: flex;
+
+      &--list {
+        width: 25%;
+        font-size: 1.4rem;
+        text-align: center;
+        height: 5rem;
+
+        &--btn {
+          width: 100%;
+          height: 5rem;
+          font-weight: lighter;
+          line-height: 1.6rem;
+          color: black;
+        }
+      }
+    }
+  }
+}
+
+@include media('<=small') {
+  .header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 70px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 100;
+
+    &__result {
+      width: 40px;
+      height: 40px;
+      margin: 30px 20px;
+    }
+
     &__logo {
       width: 50px;
       height: 50px;
       border-radius: 5px;
+      margin: 15px 20px;
     }
 
     &__btn {
       width: 15px;
       height: 15px;
+      margin: 30px 20px;
 
       &--close {
         width: 100%;
         height: 100%;
+      }
+    }
+
+    &__menu {
+      width: 60px;
+      height: 60px;
+      margin: 20px 10px;
+    }
+  }
+
+  .menu {
+    width: 100%;
+    height: auto;
+    z-index: 100;
+    position: absolute;
+    top: 100px;
+    background-color: $color-theme;
+
+    &__ul {
+      display: flex;
+
+      &--list {
+        width: 25%;
+        height: 4rem;
+        text-align: center;
+
+        &--btn {
+          width: 100%;
+          height: 4rem;
+          font-weight: lighter;
+          font-size: 1rem;
+          line-height: 1.3rem;
+          color: black;
+        }
       }
     }
   }
