--- a/src/Main/components/InfoControl/stylesheet.scss
+++ b/src/Main/components/InfoControl/stylesheet.scss
@@ -38,6 +38,7 @@
       background-color: $color-theme;
       margin: auto;
       -webkit-appearance: none;
+      position: relative;
 
       span {
         color: gray;
@@ -76,7 +77,7 @@
 
     &--confirm {
       width: 100px;
-      height: 146px;
+      height: 155px;
       position: absolute;
       right: 0;
       top: 0;
@@ -201,8 +202,8 @@
 
       button {
         width: 100%;
-        height: 5rem;
-        font-size: 2rem;
+        height: 3.2rem;
+        font-size: 1.6rem;
       }
 
       button:hover {
@@ -227,9 +228,8 @@
     &--place {
       position: absolute;
       top: 0;
-      right: 90px;
-      height: 100px;
-      line-height: 100px;
+      right: 80px;
+      line-height: 80px;
       font-size: 3rem;
       color: $color-box;
     }
@@ -237,16 +237,15 @@
     &--err {
       position: absolute;
       top: 0;
-      right: 90px;
-      height: 100px;
-      line-height: 100px;
+      right: 80px;
+      line-height: 80px;
       font-size: 3rem;
       color: $color-secondary;
     }
 
     &--intro {
       width: 95%;
-      font-size: 1.2rem;
+      font-size: 1rem;
       margin: 20px auto;
       text-align: end;
     }
