--- a/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/ResultList/stylesheet.scss
@@ -2,15 +2,11 @@
 
 @include media('>medium') {
   .prescription {
-    width: 95%;
-    height: 200px;
-    background-color: $color-theme;
-    border-radius: 25px;
-    box-shadow: 5px 5px 5px grey;
-    margin: 2.5%;
+    width: 100%;
+    display: flex;
+    height: 280px;
+    min-height: 100%;
     position: relative;
-    overflow: hidden;
-    transition: height 2s linear;
 
     &__on {
       height: 540px;
@@ -86,21 +82,72 @@
       }
     }
 
-    &__wrap {
-      width: 90%;
-      margin: 0 auto 5% auto;
+    &__cover {
+      width: 35%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: skyblue;
 
-      &--title {
+      &--img {
+        width: 100px;
+        height: 100px;
+      }
+    }
+
+    &__info {
+      width: 65%;
+      height: 100%;
+      background-color: $color-box;
+
+      &--header {
+        width: 95%;
         display: block;
-        margin-top: 30px;
-        font-size: 1.5rem;
-        font-weight: bolder;
+        font-size: 1.2rem;
+        margin: 20px auto 15px;
+        font-weight: lighter;
       }
 
-      ul {
-        li {
-          margin-top: 15px;
-          font-size: 1.1rem;
+      &--name {
+        display: flex;
+        justify-content: space-between;
+        width: 95%;
+        margin: 0 auto 10px;
+        border-bottom: 1px solid;
+        line-height: 2.2rem;
+
+        strong {
+          font-size: 2rem;
+        }
+
+        span {
+          font-size: 1.5rem;
+          vertical-align: bottom;
+        }
+      }
+
+      &--description {
+        width: 95%;
+        line-height: 2rem;
+        font-size: 1.2rem;
+        margin-left: 40px;
+        list-style: circle;
+
+        &:first-child {
+          margin-top: 20px;
+        }
+      }
+
+      &--btn {
+        position: absolute;
+        bottom: 5px;
+        right: 10px;
+
+        &--open {
+          width: 20px;
+          height: 20px;
+          background: saddlebrown;
         }
       }
     }
@@ -109,15 +156,68 @@
 
 @include media('<=small') {
   .prescription {
-    width: 95%;
-    height: 150px;
-    background-color: $color-theme;
-    border-radius: 25px;
-    box-shadow: 5px 5px 5px grey;
-    margin: 20px 2.5%;
-    position: relative;
-    overflow: hidden;
-    transition: height 2s linear;
+    width: 100%;
+    display: flex;
+    height: 220px;
+    min-height: 100%;
+
+    &__cover {
+      width: 30%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: skyblue;
+
+      &--img {
+        width: 50px;
+        height: 50px;
+      }
+    }
+
+    &__info {
+      width: 70%;
+      height: 100%;
+      background-color: $color-box;
+
+      &--header {
+        width: 95%;
+        display: block;
+        font-size: 0.9rem;
+        margin: 10px auto 15px;
+        font-weight: lighter;
+      }
+
+      &--name {
+        display: flex;
+        justify-content: space-between;
+        width: 95%;
+        margin: 0 auto 10px;
+        border-bottom: 1px solid;
+        line-height: 2.2rem;
+
+        strong {
+          font-size: 1.5rem;
+        }
+
+        span {
+          font-size: 1.2rem;
+          vertical-align: bottom;
+        }
+      }
+
+      &--description {
+        width: 95%;
+        line-height: 1.5rem;
+        font-size: 0.8rem;
+        margin-left: 25px;
+        list-style: circle;
+
+        &:first-child {
+          margin-top: 15px;
+        }
+      }
+    }
 
     &__on {
       height: 430px;
@@ -211,5 +311,39 @@
         }
       }
     }
+  }
+}
+
+.omega3 {
+  background-color: rgb(234, 238, 224);
+}
+
+.probiotics {
+  background-color: rgb(236, 226, 224);
+}
+
+.vitaminB {
+  background-color: rgb(238, 223, 227);
+}
+
+.vitaminC {
+  background-color: rgb(238, 248, 249);
+}
+
+.info {
+  &__omega3 {
+    background-color: rgb(243, 243, 235);
+  }
+
+  &__probiotics {
+    background-color: rgb(244, 238, 235);
+  }
+
+  &__vitaminB {
+    background-color: rgb(237, 235, 238);
+  }
+
+  &__vitaminC {
+    background-color: rgb(246, 251, 251);
   }
 }
