--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -33,6 +33,8 @@
 
         &--item {
           margin: auto;
+          width: 100%;
+          overflow: hidden;
 
           strong {
             margin-right: 10px;
@@ -108,71 +110,6 @@
         display: block;
         margin: auto;
       }
-
-      &--map {
-        width: 100%;
-        display: flex;
-        height: 280px;
-        min-height: 100%;
-
-        &--cover {
-          width: 35%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: skyblue;
-
-          &--img {
-            width: 100px;
-            height: 100px;
-          }
-        }
-
-        &--info {
-          width: 65%;
-          height: 100%;
-          background-color: $color-box;
-
-          &--header {
-            width: 95%;
-            display: block;
-            font-size: 1.2rem;
-            margin: 20px auto 15px;
-            font-weight: lighter;
-          }
-
-          &--name {
-            display: flex;
-            justify-content: space-between;
-            width: 95%;
-            margin: 0 auto 10px;
-            border-bottom: 1px solid;
-            line-height: 2.2rem;
-
-            strong {
-              font-size: 2rem;
-            }
-
-            span {
-              font-size: 1.5rem;
-              vertical-align: bottom;
-            }
-          }
-
-          &--description {
-            width: 95%;
-            line-height: 2rem;
-            font-size: 1.2rem;
-            margin-left: 40px;
-            list-style: circle;
-
-            &:first-child {
-              margin-top: 20px;
-            }
-          }
-        }
-      }
     }
 
     &__ad {
@@ -218,8 +155,180 @@
 
   @include media('<=small') {
     &__header {
-      display: flex;
-      padding: 0 20px;
+      width: 100%;
+      height: auto;
+      background-color: rgb(247, 247, 247);
+      padding: 30px 0 60px;
+
+      &--title {
+        width: 90%;
+        margin: 0 auto 30px;
+        font-size: 2rem;
+        font-weight: lighter;
+        line-height: 3rem;
+        border-bottom: 1px solid;
+      }
+
+      &--info {
+        width: 75%;
+        display: flex;
+        align-items: center;
+        font-size: 1.3rem;
+        font-weight: lighter;
+        margin: 40px auto;
+
+        &--item {
+          margin: auto;
+
+          strong {
+            margin-right: 10px;
+          }
+        }
+      }
+
+      &--bmi {
+        width: 90%;
+        margin: 0 auto 10px;
+        display: flex;
+        height: 25px;
+
+        &--list {
+          width: 20%;
+          height: 1.2rem;
+          text-align: center;
+          font-size: 1rem;
+          margin: auto;
+
+          &--gauge {
+            width: 100%;
+            height: 25px;
+            border-right: 1px solid rgb(230, 230, 230);
+            background-color: none;
+            z-index: 10;
+          }
+        }
+      }
+
+      &--section {
+        position: relative;
+        width: 90%;
+        margin: auto;
+
+        &--gauge {
+          position: absolute;
+          top: 0;
+          width: 30%;
+          height: 28px;
+          z-index: 0;
+          background-color: $color-secondary;
+          border-radius: 50px;
+        }
+      }
+
+      &--wrap {
+        border: 1px solid rgb(244, 149, 152);
+        border-radius: 50px;
+        overflow: hidden;
+        margin-bottom: 40px;
+        width: 100% !important;
+      }
+
+      &--intro {
+        display: block;
+        width: 90%;
+        margin: auto;
+        font-size: 0.9rem;
+      }
+    }
+
+    &__list {
+      width: 100%;
+      height: auto;
+      margin: auto;
+
+      &--title {
+        width: 90%;
+        font-size: 1.4rem;
+        font-weight: lighter;
+        line-height: 4rem;
+        display: block;
+        margin: auto;
+      }
+
+      &--map {
+        width: 100%;
+        display: flex;
+        height: 220px;
+        min-height: 100%;
+
+        &--cover {
+          width: 30%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background-color: skyblue;
+
+          &--img {
+            width: 50px;
+            height: 50px;
+          }
+        }
+
+        &--info {
+          width: 70%;
+          height: 100%;
+          background-color: $color-box;
+
+          &--header {
+            width: 95%;
+            display: block;
+            font-size: 0.9rem;
+            margin: 10px auto 15px;
+            font-weight: lighter;
+          }
+
+          &--name {
+            display: flex;
+            justify-content: space-between;
+            width: 95%;
+            margin: 0 auto 10px;
+            border-bottom: 1px solid;
+            line-height: 2.2rem;
+
+            strong {
+              font-size: 1.5rem;
+            }
+
+            span {
+              font-size: 1.2rem;
+              vertical-align: bottom;
+            }
+          }
+
+          &--description {
+            width: 95%;
+            line-height: 1.5rem;
+            font-size: 0.8rem;
+            margin-left: 25px;
+            list-style: circle;
+
+            &:first-child {
+              margin-top: 15px;
+            }
+          }
+        }
+      }
+    }
+
+    &__ad {
+      width: 100%;
+      height: 410px;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
     }
 
     &__control {
@@ -254,36 +363,7 @@
   }
 }
 
-.omega3 {
-  background-color: rgb(234, 238, 224);
-}
-
-.probiotics {
-  background-color: rgb(236, 226, 224);
-}
-
-.vitaminB {
-  background-color: rgb(238, 223, 227);
-}
-
-.vitaminC {
-  background-color: rgb(238, 248, 249);
-}
-
-.info {
-  &__omega3 {
-    background-color: rgb(243, 243, 235);
-  }
-
-  &__probiotics {
-    background-color: rgb(244, 238, 235);
-  }
-
-  &__vitaminB {
-    background-color: rgb(237, 235, 238);
-  }
-
-  &__vitaminC {
-    background-color: rgb(246, 251, 251);
-  }
+.select {
+  font-weight: 900;
+  color: $color-secondary;
 }
