--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -1,22 +1,34 @@
 @import 'common/stylesheet/index.scss';
 
-.result {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 100px;
-  overflow: auto;
+@include media('>medium') {
+  .result {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    overflow-x: hidden !important;
 
-  @include media('>medium') {
+    &::-webkit-scrollbar {
+      // width: 3px;
+      // background-color: none;
+      // position: absolute;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #2f3542;
+    }
     &__header {
       width: 100%;
       height: auto;
       background-color: rgb(247, 247, 247);
-      padding: 50px 0 100px;
+      padding: 30px 0 30px;
 
       &--title {
         width: 90%;
-        margin: 0 auto 50px;
+        margin: 0 auto 20px;
         font-size: 2.8rem;
         font-weight: lighter;
         line-height: 3.4rem;
@@ -29,7 +41,7 @@
         align-items: center;
         font-size: 1.6rem;
         font-weight: lighter;
-        margin: 70px auto;
+        margin: 40px auto;
 
         &--item {
           margin: auto;
@@ -47,6 +59,7 @@
         margin: 0 auto 20px;
         display: flex;
         height: 30px;
+        background-color: none;
 
         &--list {
           width: 20%;
@@ -54,14 +67,11 @@
           text-align: center;
           font-size: 1.5rem;
           margin: auto;
+          background-color: none;
+        }
 
-          &--gauge {
-            width: 100%;
-            height: 25px;
-            border-right: 1px solid rgb(230, 230, 230);
-            background-color: none;
-            z-index: 10;
-          }
+        &--gauge {
+          border-right: 1px solid rgb(230, 230, 230);
         }
       }
 
@@ -74,7 +84,7 @@
           position: absolute;
           top: 0;
           width: 30%;
-          height: 33px;
+          height: 100%;
           z-index: 0;
           background-color: $color-secondary;
           border-radius: 50px;
@@ -114,7 +124,7 @@
 
     &__ad {
       width: 100%;
-      height: 650px;
+      height: 600px;
 
       img {
         width: 100%;
@@ -123,49 +133,65 @@
     }
 
     &__control {
-      width: 100%;
-      position: absolute;
-      bottom: 30px;
       display: flex;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      background: $color-theme;
 
       &--pulish {
-        width: 60px;
-        height: 60px;
-        background-color: $color-box;
-        border-radius: 10px;
-        margin: auto 50px auto 20%;
+        width: 12%;
+        height: 80px;
+        margin: auto;
+
+        &:hover {
+          background-color: $color-box;
+        }
 
         img {
-          width: 85%;
-          height: 85%;
+          width: 50px;
+          height: 50px;
           margin: auto;
         }
       }
 
       &--confirm {
-        width: 40%;
+        width: 80%;
         height: 80px;
+        margin: auto;
         font-size: 2.2rem;
         background-color: $color-secondary;
-        border-radius: 40px;
+        border-radius: 20px;
         color: $color-box;
       }
     }
   }
+}
 
-  @include media('<=small') {
+@include media('<=small') {
+  .result {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    overflow: auto;
+    overflow-x: hidden !important;
+
     &__header {
       width: 100%;
       height: auto;
       background-color: rgb(247, 247, 247);
-      padding: 30px 0 60px;
+      padding: 10px 0 20px;
 
       &--title {
         width: 90%;
         margin: 0 auto 30px;
-        font-size: 2rem;
+        font-size: 1.8rem;
         font-weight: lighter;
-        line-height: 3rem;
+        line-height: 2.8rem;
         border-bottom: 1px solid;
       }
 
@@ -173,9 +199,9 @@
         width: 75%;
         display: flex;
         align-items: center;
-        font-size: 1.3rem;
+        font-size: 1.1rem;
         font-weight: lighter;
-        margin: 40px auto;
+        margin: 20px auto;
 
         &--item {
           margin: auto;
@@ -201,7 +227,7 @@
 
           &--gauge {
             width: 100%;
-            height: 25px;
+            height: 17px;
             border-right: 1px solid rgb(230, 230, 230);
             background-color: none;
             z-index: 10;
@@ -218,7 +244,7 @@
           position: absolute;
           top: 0;
           width: 30%;
-          height: 28px;
+          height: 100%;
           z-index: 0;
           background-color: $color-secondary;
           border-radius: 50px;
@@ -229,7 +255,7 @@
         border: 1px solid rgb(244, 149, 152);
         border-radius: 50px;
         overflow: hidden;
-        margin-bottom: 40px;
+        margin-bottom: 30px;
         width: 100% !important;
       }
 
@@ -323,7 +349,7 @@
 
     &__ad {
       width: 100%;
-      height: 410px;
+      height: 400px;
 
       img {
         width: 100%;
@@ -332,28 +358,28 @@
     }
 
     &__control {
-      width: 100%;
       position: absolute;
-      bottom: 30px;
+      bottom: 0;
       display: flex;
+      width: 100%;
+      height: 90px;
+      background: $color-theme;
 
       &--pulish {
-        width: 40px;
-        height: 40px;
-        background-color: $color-box;
+        width: 11%;
         border-radius: 10px;
-        margin: auto 30px auto 20%;
+        margin: auto;
 
         img {
           width: 85%;
-          height: 85%;
           margin: auto;
         }
       }
 
       &--confirm {
-        width: 40%;
+        width: 85%;
         height: 50px;
+        margin: auto;
         font-size: 1.5rem;
         background-color: $color-secondary;
         border-radius: 40px;
