전체 디자인 오류 수정 및 오타 수정

--- a/src/Main/components/BarGauge/stylesheet.scss
+++ b/src/Main/components/BarGauge/stylesheet.scss
@@ -1,9 +1,10 @@
 @import 'common/stylesheet/index.scss';
 
 .bar {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
+  max-width: 800px;
   height: 1.5vh;
   background-color: $color-button;
 
