--- a/src/Main/components/AnswerList/stylesheet.scss
+++ b/src/Main/components/AnswerList/stylesheet.scss
@@ -1,12 +1,10 @@
 @import 'common/stylesheet/index.scss';
 
 @include media('>medium') {
+  // height 오류
   .qna__list {
-    margin-top: 50px;
-    padding: 0 20px;
-    height: 70vh;
-    overflow: auto;
     text-align: left;
+    padding: 30px 0 100px;
 
     &--three {
       display: inline-block;
@@ -40,10 +38,21 @@
       border: 3px solid $color-secondary;
       background-color: $color-button;
     }
+  }
+
+  .qna__one {
+    height: 100%;
+    text-align: left;
+    padding: 30px 0 0;
+
+    &--select {
+      background-color: $color-button !important;
+      border: 3px solid $color-secondary !important;
+    }
 
     &--answer {
       width: 90%;
-      height: 4rem;
+      height: 70px;
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
@@ -53,8 +62,8 @@
 
       &--one {
         width: 90%;
-        height: 4rem;
-        line-height: 3.6rem;
+        height: 40px;
+        line-height: 65px;
         font-size: 1.5rem;
         text-align: left;
       }
@@ -75,24 +84,11 @@
         margin: auto 30px;
         background-color: $color-secondary;
       }
-    }
 
-    &--answer:hover {
-      border: 3px solid $color-secondary;
-      background-color: $color-theme;
-    }
-
-    &--select {
-      width: 90%;
-      height: 4rem;
-      line-height: 3.6rem;
-      font-size: 1.5rem;
-      margin: auto auto 10px;
-      display: flex;
-      justify-content: center;
-      background-color: $color-button;
-      border-radius: 25px;
-      border: 3px solid $color-secondary;
+      &:hover {
+        border: 3px solid $color-secondary;
+        background-color: $color-theme;
+      }
     }
   }
 }
@@ -105,8 +101,6 @@
   .qna__list {
     margin-top: -60px;
     padding: 0 20px;
-    height: 70vh;
-    overflow: auto;
     text-align: left;
 
     &--three {
@@ -136,52 +130,51 @@
       color: $color-secondary;
       font-weight: bold;
     }
+  }
+
+  .qna__one {
+    text-align: left;
+    padding: 30px 0 0;
+
+    &--select {
+      background-color: $color-button !important;
+      border: 3px solid $color-secondary !important;
+    }
 
     &--answer {
-      width: 95%;
-      height: 3.5rem;
+      width: 90%;
+      height: 50px;
       margin: auto auto 10px;
       display: flex;
       justify-content: center;
       background-color: $color-theme;
       border-radius: 25px;
-      border: 4px solid $color-box;
+      border: 5px solid $color-box;
 
       &--one {
         width: 90%;
-        height: 3rem;
+        height: 40px;
+        line-height: 45px;
         font-size: 1rem;
-        line-height: 3rem;
         text-align: left;
-        margin: auto;
       }
 
       &--check {
-        width: 15px;
-        height: 15px;
+        width: 25px;
+        height: 25px;
         border: 4px solid rgb(220, 220, 220);
         border-radius: 50%;
-        margin: auto 20px;
+        margin: auto 30px;
       }
 
       &--pick {
-        width: 15px;
-        height: 15px;
-        border: 4px solid $color-secondary;
+        width: 25px;
+        height: 25px;
+        border: 3px solid $color-secondary;
         border-radius: 50%;
-        margin: auto 20px;
+        margin: auto 30px;
         background-color: $color-secondary;
       }
-    }
-
-    &--select {
-      width: 95%;
-      height: 3.5rem;
-      margin: auto auto 10px;
-      display: flex;
-      background-color: $color-button;
-      border-radius: 25px;
-      border: 3px solid $color-secondary;
     }
   }
 }
