--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -1,16 +1,21 @@
 @import 'common/stylesheet/index.scss';
 
 .customized {
-  position: absolute;
-  top: 70px;
   width: 100%;
+  height: 100%;
+  margin-top: 70px;
 
-  &__confirm {
-    width: 100%;
-    position: absolute;
-    bottom: 3vh;
+  @include media('>medium') {
+    &__confirm {
+      width: 800px;
+      height: 110px;
+      margin: auto;
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: $color-theme;
 
-    @include media('>medium') {
       &__footer {
         margin: auto;
         width: 90%;
@@ -32,13 +37,24 @@
         color: $color-secondary;
       }
     }
+  }
 
-    @include media('<=small') {
+  @include media('<=small') {
+    &__confirm {
+      width: 100%;
+      height: 70px;
+      margin: auto;
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: $color-theme;
+
       &__footer {
         margin: auto;
         width: 90%;
         line-height: 3rem;
-        background-color: $color-theme;
+        background-color: $color-box;
         border-radius: 40px;
         font-size: 1.2rem;
         text-align: center;
@@ -48,11 +64,6 @@
         background-color: $color-secondary;
         border-radius: 40px;
         color: $color-box;
-      }
-
-      &__btn:hover {
-        background-color: $color-box;
-        color: $color-secondary;
       }
     }
   }
