--- a/src/Main/views/QnaPick/stylesheet.scss
+++ b/src/Main/views/QnaPick/stylesheet.scss
@@ -1,15 +1,22 @@
 @import 'common/stylesheet/index.scss';
 
 .qna__pick {
-  position: absolute;
-  top: 70px;
+  margin-top: 70px;
   width: 100%;
+  height: 90vh;
   text-align: center;
+  position: relative;
+
   @include media('>medium') {
     &--confirm {
-      width: 100%;
-      position: absolute;
-      bottom: 3vh;
+      width: 800px;
+      height: 110px;
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      background-color: $color-theme;
 
       &--footer {
         margin: auto;
