--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -3,23 +3,9 @@
 @include media('>medium') {
   .result {
     width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 70px;
-    left: 0;
-    right: 0;
-    overflow: auto;
+    height: 90vh;
+    margin-top: 70px;
     overflow-x: hidden !important;
-
-    // &::-webkit-scrollbar {
-    //   // width: 3px;
-    //   // background-color: none;
-    //   // position: absolute;
-    // }
-
-    // &::-webkit-scrollbar-thumb {
-    //   background-color: #2f3542;
-    // }
 
     &__header {
       width: 100%;
@@ -125,7 +111,8 @@
 
     &__ad {
       width: 100%;
-      height: 600px;
+      height: auto;
+      margin-bottom: 85px;
 
       img {
         width: 100%;
@@ -165,6 +152,8 @@
         background-color: $color-secondary;
         border-radius: 20px;
         color: $color-box;
+        text-align: center;
+        line-height: 80px;
       }
     }
   }
@@ -180,6 +169,7 @@
     right: 0;
     overflow: auto;
     overflow-x: hidden !important;
+    margin-bottom: 65px;
 
     &__header {
       width: 100%;
@@ -349,7 +339,8 @@
 
     &__ad {
       width: 100%;
-      height: 330px;
+      height: auto;
+      margin-bottom: 65px;
 
       img {
         width: 100%;
@@ -358,7 +349,7 @@
     }
 
     &__control {
-      position: absolute;
+      position: fixed;
       bottom: 0;
       display: flex;
       width: 100%;
@@ -368,6 +359,7 @@
       &--pulish {
         width: 11%;
         border-radius: 10px;
+
         margin: auto;
 
         img {
