--- a/src/Main/views/StaticQna/stylesheet.scss
+++ b/src/Main/views/StaticQna/stylesheet.scss
@@ -1,12 +1,43 @@
 @import 'common/stylesheet/index.scss';
 
 @include media('>medium') {
-  .static__qna {
-    height: 70vh;
+  .static__list {
     position: absolute;
-    top: 50%;
+    top: 0 !important;
     left: 0;
     right: 0;
+    margin-top: 70px;
+    transform: translateY(0) !important;
+    max-height: 75vh;
+    overflow-y: auto;
+  }
+
+  .static__qna {
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 50px 20px 150px !important;
+
+    &--info {
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      margin: 0 auto;
+    }
+  }
+}
+
+@include media('<=small') {
+  .static__list {
+    position: absolute;
+    top: 0 !important;
+    left: 0;
+    right: 0;
+    margin-top: 70px;
+    transform: translateY(0) !important;
+  }
+
+  .static__qna {
+    top: 50%;
     transform: translateY(-50%);
 
     &--info {
@@ -15,31 +46,5 @@
       text-align: center;
       margin: 0 auto;
     }
-  }
-
-  .static__list {
-    top: 70px !important;
-    transform: translateY(0) !important;
-  }
-}
-
-@include media('<=small') {
-  .static__qna {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    right: 0;
-
-    &--info {
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      margin: 0 auto;
-    }
-  }
-
-  .static__list {
-    top: 70px !important;
-    transform: translateY(0) !important;
   }
 }
