--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -3,7 +3,8 @@
 @include media('>medium') {
   .result {
     width: 100%;
-    height: 90vh;
+    max-height: 90vh;
+    height: auto;
     margin-top: 70px;
     overflow-x: hidden !important;
 
@@ -112,7 +113,7 @@
     &__ad {
       width: 100%;
       height: auto;
-      margin-bottom: 85px;
+      margin-bottom: 20px;
 
       img {
         width: 100%;
