--- a/src/Main/views/Home/stylesheet.scss
+++ b/src/Main/views/Home/stylesheet.scss
@@ -7,13 +7,11 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: -8px;
-  left: -8px;
+  top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
   content: '';
-  width: 100%;
-  height: 100%;
   border: 8px solid rgba(0, 0, 0, 0.2);
   border-radius: 100%;
   animation-name: ripple;
@@ -43,6 +41,7 @@
     &__main {
       padding: 20px;
       width: 90%;
+      height: auto;
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
@@ -167,14 +166,15 @@
 
 @include media('<=small') {
   .home {
+    margin-top: 80px;
     width: 100%;
+    height: 0;
+    position: relative;
 
     &__main {
       padding: 20px;
       width: 90%;
-      position: absolute;
-      top: 50%;
-      transform: translateY(-60%);
+      transform: translateY(40%);
 
       &--text {
         display: block;
@@ -203,7 +203,7 @@
     }
 
     &__intro {
-      position: absolute;
+      position: fixed;
       bottom: 3rem;
       padding-left: 20px;
       margin-bottom: 10px;
@@ -211,11 +211,11 @@
     }
 
     &__introImg {
-      position: absolute;
+      position: fixed;
       right: 0;
       bottom: 0.5rem;
       text-align: center;
-      z-index: 10;
+      z-index: 100;
       margin-right: 20px;
       cursor: pointer;
 
