--- a/src/Main/views/QnaResult/stylesheet.scss
+++ b/src/Main/views/QnaResult/stylesheet.scss
@@ -377,6 +377,8 @@
         background-color: $color-secondary;
         border-radius: 40px;
         color: $color-box;
+        text-align: center;
+        line-height: 80px;
       }
     }
   }
