--- a/src/Main/views/Qna/stylesheet.scss
+++ b/src/Main/views/Qna/stylesheet.scss
@@ -2,8 +2,9 @@
 
 .customized {
   width: 100%;
-  height: 100%;
+  height: auto;
   margin-top: 70px;
+  margin-bottom: 80px;
 
   @include media('>medium') {
     &__confirm {
