오류 나는 부분 수정 및 디자인 변경 &  애니메이션 추가

--- a/src/Main/views/QnaResult/components/BMIControl/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/BMIControl/stylesheet.scss
@@ -38,9 +38,10 @@
       &--gauge {
         position: absolute;
         top: 0;
-        width: 30%;
         height: 100%;
         z-index: 0;
+        width: 0%;
+        transition: width 1s linear;
         background-color: $color-secondary;
         border-radius: 50px;
       }
@@ -78,8 +79,8 @@
       &--gauge {
         position: absolute;
         top: 0;
-        width: 30%;
         height: 100%;
+        transition: width 1s linear;
         z-index: 0;
         background-color: $color-secondary;
         border-radius: 50px;
