--- a/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
+++ b/src/Main/views/QnaResult/components/PublicPopup/stylesheet.scss
@@ -14,8 +14,8 @@
 
   .public {
     overflow: auto;
-    width: 90%;
-    max-width: 700px;
+    width: 70%;
+    max-width: 500px;
     border-radius: 25px;
     background-color: $color-box;
     position: absolute;
@@ -34,7 +34,7 @@
         margin: auto;
 
         &--logo {
-          width: 20%;
+          width: 17%;
           margin: 30px auto 0;
           border-radius: 5px;
         }
@@ -75,13 +75,13 @@
           text-align: center;
 
           &--img {
-            width: 80%;
-            margin: 20px auto;
+            width: 60%;
+            margin: 15px auto;
           }
 
           &--span {
             color: black;
-            font-size: 1.2rem;
+            font-size: 1rem;
           }
         }
       }
@@ -96,13 +96,13 @@
         margin: auto;
 
         &--logo {
-          width: 20%;
+          width: 15%;
           margin: 30px auto 0;
           border-radius: 5px;
         }
 
         &--title {
-          margin: 10% auto 15%;
+          margin: 10% auto;
           font-size: 1.5rem;
           font-weight: lighter;
           line-height: 2.5rem;
@@ -137,12 +137,12 @@
           text-align: center;
 
           &--img {
-            width: 70%;
+            width: 50%;
             margin: 20px auto 15px;
           }
 
           &--span {
-            font-size: 0.9rem;
+            font-size: 0.8rem;
           }
         }
       }
