--- a/src/Admin/views/Know/stylesheet.scss
+++ b/src/Admin/views/Know/stylesheet.scss
@@ -1,20 +1,37 @@
 @import 'common/stylesheet/index.scss';
 
 .admin__home {
+  background-color: white;
+  padding: 10px;
+
   &--header {
     font-size: 1.5rem;
     margin-bottom: 20px;
   }
 
+  &--nav {
+    display: flex;
+    margin-bottom: 20px;
+
+    &--item {
+      width: 50%;
+
+      &--btn {
+        width: 100%;
+        border: 1px solid rgb(221, 221, 221);
+        background-color: rgb(244, 244, 244);
+        text-align: center;
+        font-size: 1.3rem;
+        line-height: 3rem;
+      }
+    }
+  }
+
   &--gauge {
     display: flex;
-    width: 100%;
-    height: 50px;
-    line-height: 50px;
-    border: 1px solid;
-    margin-bottom: 10px;
-    overflow: hidden;
+    width: 60%;
     text-align: center;
+    margin: auto;
   }
 
   &--table {
@@ -62,4 +79,9 @@
       background-color: rgb(244, 244, 244);
     }
   }
+}
+
+.active {
+  color: white;
+  background-color: rgb(90, 170, 172);
 }
