--- a/src/Admin/views/Nutrients/stylesheet.scss
+++ b/src/Admin/views/Nutrients/stylesheet.scss
@@ -1,8 +1,10 @@
 @import 'common/stylesheet/index.scss';
 
-.admin__home {
+.admin__nutrition {
   background-color: white;
   padding: 10px;
+  height: 90vh;
+  overflow: auto;
 
   &--header {
     margin-bottom: 20px;
@@ -11,31 +13,6 @@
       font-size: 1.5rem;
       margin-bottom: 20px;
     }
-  }
-
-  &--nav {
-    display: flex;
-    margin-bottom: 20px;
-
-    &--item {
-      width: 50%;
-
-      &--btn {
-        width: 100%;
-        border: 1px solid rgb(221, 221, 221);
-        background-color: rgb(244, 244, 244);
-        text-align: center;
-        font-size: 1.3rem;
-        line-height: 3rem;
-      }
-    }
-  }
-
-  &--gauge {
-    display: flex;
-    width: 55%;
-    text-align: center;
-    margin: auto;
   }
 
   &--table {
@@ -57,10 +34,23 @@
       width: 100%;
       height: 2rem;
       line-height: 2rem;
-      text-align: center;
 
       &--td {
+        text-align: center;
+        height: 2rem;
+        line-height: 2rem;
         border: 1px solid rgb(221, 221, 221);
+        vertical-align: middle;
+
+        &--img {
+          width: 40px;
+          height: auto;
+          margin: auto;
+        }
+
+        &--btn {
+          color: black;
+        }
       }
     }
   }
