--- a/src/Admin/components/SubNav/stylesheet.scss
+++ b/src/Admin/components/SubNav/stylesheet.scss
@@ -14,6 +14,11 @@
       text-align: center;
       font-size: 1.3rem;
       line-height: 3rem;
+
+      &:hover {
+        background-color: rgb(221, 221, 221);
+        color: white;
+      }
     }
   }
 }
