--- a/src/Admin/views/Admin/stylesheet.scss
+++ b/src/Admin/views/Admin/stylesheet.scss
@@ -41,6 +41,10 @@
       font-size: 1.2rem;
       color: white;
       text-align: center;
+      &:hover {
+        background-color: rgb(221, 221, 221);
+        color: black;
+      }
     }
 
     &--select {
